Add Japanese version for template_001 with bilingual support
- Add index_ja.html with Noto Sans JP font and natural Japanese text
- Keep English elements (Services, About, Works, Contact) for stylish design
- Add language switcher in navigation (EN/JP)
- Add mobile responsive menu with language toggle
- Update catalog-manifest.json with languages field
- Update index.html gallery to show language buttons for bilingual templates
- Temporarily disable auto-merge workflow

--- a/index.html
+++ b/index.html
@@ -59,9 +59,20 @@
                             </div>
                         </div>
                         <div class="p-6 pt-0 mt-auto">
-                            <a href="${indexPath}" target="_blank" class="block w-full text-center bg-gray-900 text-white py-3 rounded-lg font-semibold hover:bg-indigo-600 transition-colors">
-                                プレビューを開く
-                            </a>
+                            ${template.languages && template.languages.length > 1 ? `
+                                <div class="grid grid-cols-2 gap-2">
+                                    <a href="${template.path}/index.html" target="_blank" class="text-center bg-gray-900 text-white py-3 rounded-lg font-semibold hover:bg-indigo-600 transition-colors">
+                                        English
+                                    </a>
+                                    <a href="${template.path}/index_ja.html" target="_blank" class="text-center bg-gray-700 text-white py-3 rounded-lg font-semibold hover:bg-indigo-600 transition-colors">
+                                        日本語
+                                    </a>
+                                </div>
+                            ` : `
+                                <a href="${indexPath}" target="_blank" class="block w-full text-center bg-gray-900 text-white py-3 rounded-lg font-semibold hover:bg-indigo-600 transition-colors">
+                                    プレビューを開く
+                                </a>
+                            `}
                         </div>
                     `;
                     gallery.appendChild(card);
