--- a/catalog/template_001_tech_minimal/index_ja.html
+++ b/catalog/template_001_tech_minimal/index_ja.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tech Minimal Template - {{COMPANY_NAME}}</title>
+    <title>{{COMPANY_NAME}} - Tech Minimal</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap');
-        body { font-family: 'Inter', sans-serif; }
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Noto+Sans+JP:wght@300;400;500;700&display=swap');
+        body { 
+            font-family: 'Inter', 'Noto Sans JP', sans-serif;
+            font-feature-settings: "palt";
+        }
     </style>
 </head>
 <body class="bg-white text-slate-900">
@@ -21,7 +24,7 @@
             <a href="#" class="hover:text-blue-600 transition">About</a>
             <a href="#" class="hover:text-blue-600 transition">Works</a>
             <a href="#" class="bg-slate-900 text-white px-5 py-2 rounded-full hover:bg-blue-600 transition">Contact</a>
-            <a href="index_ja.html" class="text-slate-400 hover:text-slate-600 transition text-xs border-l border-slate-200 pl-4">JP</a>
+            <a href="index.html" class="text-slate-400 hover:text-slate-600 transition text-xs border-l border-slate-200 pl-4">EN</a>
         </div>
         
         <!-- Mobile Menu Button -->
@@ -40,8 +43,8 @@
             <a href="#" class="text-sm font-medium hover:text-blue-600 transition">Works</a>
             <a href="#" class="bg-slate-900 text-white px-5 py-2 rounded-full hover:bg-blue-600 transition text-center text-sm font-medium w-fit">Contact</a>
             <div class="flex space-x-4 pt-2 border-t border-slate-200">
-                <a href="index.html" class="text-sm font-bold text-slate-900">EN</a>
-                <a href="index_ja.html" class="text-sm font-medium text-slate-400 hover:text-slate-600">JP</a>
+                <a href="index.html" class="text-sm font-medium text-slate-400 hover:text-slate-600">EN</a>
+                <a href="index_ja.html" class="text-sm font-bold text-slate-900">JP</a>
             </div>
         </div>
     </div>
@@ -57,11 +60,12 @@
     <!-- Hero Section -->
     <header class="px-8 py-24 max-w-7xl mx-auto">
         <div class="max-w-3xl">
-            <h1 class="text-6xl md:text-8xl font-bold leading-tight mb-8">
-                Building the <span class="text-blue-600">future</span> of technology.
+            <h1 class="text-5xl md:text-7xl font-bold leading-tight mb-6">
+                Building the <span class="text-blue-600">future</span><br>of technology
             </h1>
-            <p class="text-xl text-slate-500 mb-10 leading-relaxed">
-                We provide minimal and powerful solutions for modern businesses. Transforming complex problems into simple, elegant digital experiences.
+            <p class="text-lg text-slate-500 mb-10 leading-relaxed max-w-xl">
+                シンプルでありながら強力なソリューションで、<br>
+                複雑な課題を美しいデジタル体験に変えていきます。
             </p>
             <div class="flex space-x-4">
                 <button class="bg-slate-900 text-white px-8 py-4 rounded-lg font-bold hover:bg-blue-600 transition">Get Started</button>
@@ -75,7 +79,7 @@
         <div class="max-w-7xl mx-auto">
             <div class="flex flex-col md:flex-row justify-between items-end mb-16">
                 <h2 class="text-4xl font-bold">Our Expertise</h2>
-                <p class="text-slate-500 max-w-md mt-4 md:mt-0">Focused on delivery high-quality results with the latest tech stack.</p>
+                <p class="text-slate-500 max-w-md mt-4 md:mt-0">最新の技術で、確かな品質の成果を。</p>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-12">
                 <div class="p-8 bg-white rounded-2xl shadow-sm hover:shadow-md transition">
@@ -83,21 +87,21 @@
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4" /></svg>
                     </div>
                     <h3 class="text-xl font-bold mb-4">Web Development</h3>
-                    <p class="text-slate-500 leading-relaxed">Scalable and fast web applications built with modern frameworks.</p>
+                    <p class="text-slate-500 leading-relaxed">モダンなフレームワークで構築する、スケーラブルで高速なWebアプリケーション。</p>
                 </div>
                 <div class="p-8 bg-white rounded-2xl shadow-sm hover:shadow-md transition">
                     <div class="w-12 h-12 bg-purple-100 rounded-lg flex items-center justify-center mb-6 text-purple-600">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z" /></svg>
                     </div>
                     <h3 class="text-xl font-bold mb-4">Mobile Solutions</h3>
-                    <p class="text-slate-500 leading-relaxed">Native-feel cross-platform apps that your users will love.</p>
+                    <p class="text-slate-500 leading-relaxed">ネイティブのような操作感を実現する、クロスプラットフォームアプリ開発。</p>
                 </div>
                 <div class="p-8 bg-white rounded-2xl shadow-sm hover:shadow-md transition">
                     <div class="w-12 h-12 bg-green-100 rounded-lg flex items-center justify-center mb-6 text-green-600">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" /></svg>
                     </div>
                     <h3 class="text-xl font-bold mb-4">Data Analytics</h3>
-                    <p class="text-slate-500 leading-relaxed">Insights driven from your data to help you make better decisions.</p>
+                    <p class="text-slate-500 leading-relaxed">データから価値ある洞察を導き出し、より良い意思決定をサポートします。</p>
                 </div>
             </div>
         </div>
